--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <div class="Picture">
     <img class="Picture-img" src="./crush_image/Screenshot_2025_0220_165408.jpg" alt="" />
-    <div class="Picture-note"><span>Cat nose</span></div>
+    <div class="Picture-note"><span>Bhau aani Ti👻 chi choti Tai</span></div>
   </div>
   <div class="Picture">
     <img class="Picture-img" id="pic_1" src="./crush_image/Screenshot_2025_0220_165259.jpg" alt="" />
