--- a/index.html
+++ b/index.html
@@ -2,92 +2,49 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>for you only</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>❤️👻👀</title>
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
- <audio autoplay loop >
-  <source src="./songs copy/Hrudayat_Vaje_Something___Ti_Saddhya_Kay_Karte___Ankush_Chaudhari___Tejashree_Pradhan(256k).mp3" type="audio/mp3">
- </audio>
-<div class="Container">
-  <h3>This is for you only</h3>
-  <a href="./src/index.html" ><h1>❤️</h1></a>
+<!-- A pen by Developer Rahul  -->
+ <a href="./index_1.html"><div class="paper heart">
+
+</div></a>
+
   
-  <!-- other cards -->
-  
-  <div class="Picture">
-    <img class="Picture-img" src="./crush_image/Screenshot_2025_0220_165429.jpg" alt="" />
-    <div class="Picture-note"><span>Over cutiiiii👻</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img"  id="pic_1" src="./crush_image/Screenshot_2025_0220_165247.jpg" alt="" />
-    <div class="Picture-note"><span>Marathi Bori😎</span></div>
-  </div>
+<div class="paper red">
+  <p> and I fallen in</p>
+    <p>cute❤️ </p>
 
-  <div class="Picture">
-    <img class="Picture-img" src="./crush_image/Screenshot_2025_0220_165046.jpg" alt="" />
-    <div class="Picture-note"><span>cutiiiii👻</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img"  src="./crush_image/Screenshot_2025_0220_164856.jpg" alt="" />
-    <div class="Picture-note"><span>Chitrakala 🤩</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" id="pic_1" src="./crush_image/Screenshot_2025_0220_164836.jpg" alt="" />
-    <div class="Picture-note"><span>Jerry cute❤️</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" id="pic_1" src="./crush_image/Screenshot_2025_0220_164808.jpg" alt="" />
-    <div class="Picture-note"><span>kiti cute❤️</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" src="./crush_image/Screenshot_2025_0220_165514.jpg" alt="" />
-    <div class="Picture-note"><span>Congratulation 🎉</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" src="./crush_image/Screenshot_2025_0220_165429.jpg" alt="" />
-    <div class="Picture-note"><span>kelva Beach</span></div>
-  </div>
+</div>
 
 
 
+</div>
+
+<div class="paper red">
+  <p>How can be </p>
+   <p> someone so cute ❤️ </p>
+
+
+</div>
 
 
 
-  <div class="Picture">
-    <img class="Picture-img" src="./crush_image/Screenshot_2025_0220_165408.jpg" alt="" />
-    <div class="Picture-note"><span>Bhau aani Ti👻 chi choti Tai</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" id="pic_1" src="./crush_image/Screenshot_2025_0220_165259.jpg" alt="" />
-    <div class="Picture-note"><span>Kiti cute❤️</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" src="./crush_image/Screenshot_2025_0220_165247.jpg" alt="" />
-    <div class="Picture-note"><span>Marathi Mori</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" src="./crush_image/Screenshot_2025_0220_165046.jpg" alt="" />
-    <div class="Picture-note"><span>Tithal Beach</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" id="pic_1" src="./crush_image/Screenshot_2025_0220_164808.jpg" alt="" />
-    <div class="Picture-note"><span>Tuje Doreeee👀</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" src="./crush_image/Screenshot_2025_0220_164856.jpg" alt="" />
-    <div class="Picture-note"><span>Draw By Me</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img"  id="pic_1" src="./crush_image/Screenshot_2025_0220_164836.jpg" alt="" />
-    <div class="Picture-note"><span>Sarit Photo</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img"  id="pic_1" src="./crush_image/Screenshot_2025_0220_164957.jpg" alt="" />
-    <div class="Picture-note"><span>College Complete</span></div>
-  </div>
+<div class="paper red">
+<p class="p1"> and Sweet</p>
+<p class="p2">Mulgi 😍</p>
+</div>
+
+<div class="paper">
+<p class="p1">You are Cute </p>
+  <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
+</div>
+
+<div class="paper">
+<p class="p1">Drag the papers to move!</p>
 </div>
 <!-- partial -->
   <script  src="./script.js"></script>
