--- a/src/puzzle photo/Heart_Trial_Animation-main/index.html
+++ b/src/puzzle photo/Heart_Trial_Animation-main/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <a href="./Impress-your-crush-main/index.html"><h1>Truth or Dare👻</h1></a>
         <script src="script.js"></script>
     </body>
 </html>
